--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "dependencies": {
     "electron": "^4.1.4",
-    "electron-packager": "^13.1.1"
+    "electron-packager": "^13.1.1",
+    "jquery": "^3.4.0"
   },
   "devDependencies": {},
   "scripts": {
